# ocev_scripts

./: .gitignore
labyrinth/: board.py  evolu_algo.py  init_functions.py  main.py  path.py  plot_functions.py  pyproject.toml  utils.py
labyrinth/inputs/: base1  board1.py  board2.py
labyrinth/results_board1/: fitness_results.txt  info.txt  mean_results.txt  time_results.txt
labyrinth/results_board2/: mean_results.txt  time_results.txt
labyrinth/results_radios_queens/: fitness_radios_results.txt  mean_radios_results.txt  time_radios_results.txt
max-alg/: alg_functions.py  init_functions.py  main.py  pyproject.toml
max-alg/inputs/: base1
metro/: evolu_algo.py  init_functions.py  main.py  metro_line.py  path.py  plot_functions.py  pyproject.toml
metro/inputs/: base1
metro/results_paris_E14_to_E7/: fitness_results.txt  mean_results.txt  time_results.txt
metro/results_paris_E6_to_E11/: fitness_results.txt  mean_results.txt  time_results.txt
metro/results_paris_E7_to_E14/: mean_results.txt  time_results.txt
metro/results_paris_E9_to_E14/: fitness_results.txt  mean_results.txt  time_results.txt
n-queens/: evolu_algo.py  init_functions.py  main.py  plot_functions.py  pyproject.toml  queen.py  single_exec.ipynb
n-queens/inputs/: base1
n-queens/results_128_queens/: 128_results.txt  fitness_128_results.txt  mean_128_results.txt  mean__128_results.txt  time_128_results.txt
n-queens/results_16_queens/: 16_results.txt  fitness_16_results.txt  mean_16_results.txt  mean__16_results.txt  time_16_results.txt
n-queens/results_32_queens/: 32_results.txt  fitness_32_results.txt  mean_32_results.txt  mean__32_results.txt  time_32_results.txt
(+51 files in other folders)
