[tool.poetry]
name = "labyrinth"
version = "0.1.0"
description = ""
authors = ["Pedro Serpa <pedroserpah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
