[tool.poetry]
name = "max-alg"
version = "0.1.0"
description = ""
authors = ["Pedro Serpa"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
PyQt5 = "^5.15.9"
opencv-python-headless = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
