[tool.poetry]
name = "n-queens"
version = "0.1.0"
description = ""
authors = ["Pedro Serpa <pedroserpah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.12.2"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
